# medanalyser

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  start.sh
MediMindAI/MediMindAI/: pyproject.toml
MediMindAI/MediMindAI/attached_assets/: ai_medical_analyzer_readme_1759234965233.md
MediMindAI/MediMindAI/backend/: app.py  utils.py
MediMindAI/MediMindAI/frontend/: package.json
MediMindAI/MediMindAI/frontend/src/components/: HealthChart.jsx  PatientCard.jsx  ProtectedRoute.jsx  UploadReport.jsx
MediMindAI/MediMindAI/frontend/src/pages/: DoctorDashboard.jsx  Login.jsx
MediMindAI/MediMindAI/frontend/src/utils/: AuthContext.jsx  api.js
backend/: .env.example  app.py  requirements.txt  utils.py
frontend/: .env.example  .env1  index.html  package-lock.json  package.json  test-env.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: HealthChart.jsx  PatientCard.jsx  ProtectedRoute.jsx  ReportList.jsx  UploadReport.jsx
frontend/src/pages/: DoctorDashboard.jsx  Login.jsx  PatientDashboard.jsx  Signup.jsx
frontend/src/utils/: AuthContext.jsx  firebase.js
